--- a/Python 100 days projects/041 Movie Ranking (web foundation with Python)/exercicies to practice basic html/2.2 Paragraph Element/index.html
+++ b/Python 100 days projects/041 Movie Ranking (web foundation with Python)/exercicies to practice basic html/2.2 Paragraph Element/index.html
@@ -11,8 +11,8 @@ facilisis sed odio morbi quis commodo. Sagittis aliquam malesuada bibendum arcu 
 tristique magna. In hac habitasse platea dictumst vestibulum. Ornare quam viverra orci sagittis eu. Sit amet est
 placerat in. Proin fermentum leo vel orci porta non pulvinar neque laoreet. Turpis in eu mi bibendum neque egestas
 congue. Enim eu turpis egestas pretium aenean pharetra magna ac placerat. Ultrices sagittis orci a scelerisque purus
-semper eget duis at. Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium. Condimentum</p>
-lacinia quis vel eros donec ac odio.
+semper eget duis at. Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium. Condimentum
+lacinia quis vel eros donec ac odio.</p>
 
 <p>Third paragraph. Nisl purus in mollis nunc sed id semper risus. Ipsum a arcu cursus vitae congue mauris rhoncus aenean. Ridiculus mus
 mauris vitae ultricies leo integer malesuada nunc. In tellus integer feugiat scelerisque. Lectus mauris ultrices eros in
@@ -23,3 +23,4 @@ faucibus vitae aliquet nec ullamcorper. Nunc mattis enim ut tellus elementum sag
 fermentum et sollicitudin. Pellentesque habitant morbi tristique senectus. Tristique senectus et netus et. Turpis
 egestas sed tempus urna et pharetra pharetra. Feugiat vivamus at augue eget arcu dictum varius duis at. Lacus sed
 viverra tellus in hac habitasse platea dictumst vestibulum. Nisl condimentum id venenatis a condimentum vitae sapien.</p>
+
