--- a/Python 100 days projects/042 birthday invite website/index.html
+++ b/Python 100 days projects/042 birthday invite website/index.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Birthday Party</title>
 </head>
 <body>
-    
+    <h1>It's My Birthday!</h1>
+    <h2>On the 15th October</h2>
 
-    <a href="https://google.com"> This is the google page</a>
+    <img src="https://images.rawpixel.com/image_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA0L2pvYjY4NS0yMy14LmpwZw.jpg" alt="Image of a birthday cake" height=400>
 
-    </egg>
+    <h3>What to bring:</h3>
+    <ul>
+        <li>Baloons (I love baloons)</li>
+        <li>cake (I'm really good at eating)</li>
+        <li>An appetite (There will be lots of food)</li>
+    </ul>
+
+    <h3>This is where you need to go:</h3>
+    <a href="https://www.google.com.br/maps/preview">Google map link</a>
 </body>
 </html>
