--- a/Python 100 days projects/043 colour vocab website/exercises/5.1. Adding CSS/index.html
+++ b/Python 100 days projects/043 colour vocab website/exercises/5.1. Adding CSS/index.html
@@ -8,7 +8,16 @@
 
 <body>
   <h1>Three Methods of Adding CSS</h1>
+
+  
   <!-- Create 3 Links to The 3 Webpages: inline, internal and external -->
+  <ul>
+    <li><a href="external.html">External<br></a></li>
+    <li><a href="inline.html">Inline<br></a></li>
+    <li><a href="internal.html">Internal<br></a></li>
+</ul>
+
+
 </body>
 
 </html>
