--- a/Python 100 days projects/043 colour vocab website/exercises/5.1. Adding CSS/internal.html
+++ b/Python 100 days projects/043 colour vocab website/exercises/5.1. Adding CSS/internal.html
@@ -4,10 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Internal</title>
+
 </head>
 
 <body>
 <h1>Style Me in Red!</h1>
+
+<style>
+  h1{
+    color:red
+  }
+</style>
+  
 </body>
 
 </html>
